--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <li>
                     <h3>poly-maker</h3>
                     <p>Is it possible to be a market maker on https://polymarket.com?</p>
-                    <a href="https://github.com/daavidwlf/market-lens">github.com/daavidwlf/market-lens</a>
+                    <a href="https://github.com/daavidwlf/poly-maker">github.com/daavidwlf/poly-maker</a>
                     <div class="batches">
                         <span class="batch">
                             .py
@@ -94,7 +94,7 @@
                 <li>
                     <h3>rest-api</h3>
                     <p>How hard is auth?</p>
-                    <a href="https://github.com/daavidwlf/learning-room-web">github.com/daavidwlf/lang-classification</a>
+                    <a href="https://github.com/daavidwlf/rest-api">github.com/daavidwlf/rest-api</a>
                     <div class="batches">
                         <span class="batch">
                             .go
@@ -144,7 +144,7 @@
                 <li>
                     <h3>quiz-ui</h3>
                     <p>How does UI work without the -Script?</p>
-                    <a href="https://github.com/daavidwlf/lang-classification">github.com/daavidwlf/lang-classification</a>
+                    <a href="https://github.com/daavidwlf/quiz-ui">github.com/daavidwlf/quiz-ui</a>
                     <div class="batches">
                         <span class="batch">
                             .java
