style: update some stuff

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             minWidth: 200.00,
             scale: 1.00,
             scaleMobile: 1.00,
-            color: 0x505050
+            color: 0x2c2c41,
+            backgroundColor: 0x1e2020
         })
     });
     </script>
@@ -33,7 +34,11 @@
         <span class="column">
             <a href="https://github.com/daavidwlf">github.com/daavidwlf</a>
             <a href="https://www.linkedin.com/in/wolf-david/">linkedin.com/in/wolf-david/</a>
+            <a href="mailto:wolf_david@gmx.de">wolf_david@gmx.de</a>
         </span>
+        <p class="about">
+            Interested in software, statistics, electronic music and cars.
+        </p>
         <h2>Projects</h2>
         <div class="row">
             <ul>
@@ -48,9 +53,9 @@
                     </div>
                 </li>
                 <li>
-                    <h3>machine-learning-o3-predictions</h3>
-                    <p>Which type of ML model can predict different o3 values best?</p>
-                    <a href="https://github.com/daavidwlf/machine-learning-o3-predictions">github.com/daavidwlf/machine-learning-o3-predictions</a>
+                    <h3>ml-o3-predictions</h3>
+                    <p>Which type of ML model can predict o3 values best?</p>
+                    <a href="https://github.com/daavidwlf/ml-o3-predictions">github.com/daavidwlf/ml-o3-predictions</a>
                     <div class="batches">
                         <span class="batch">
                             .ipynb
@@ -79,6 +84,16 @@
                         </span>
                         <span class="batch">
                             docker
+                        </span>
+                    </div>
+                </li>
+                <li>
+                    <h3>neural-network</h3>
+                    <p>Do I need any ml library for a neural network?</p>
+                    <a href="https://github.com/daavidwlf/neural-network">github.com/daavidwlf/neural-network</a>
+                    <div class="batches">
+                        <span class="batch">
+                            .py
                         </span>
                     </div>
                 </li>
@@ -125,7 +140,7 @@
                             .java
                         </span>
                         <span class="batch">
-                            aws
+                            awt
                         </span>
                         <span class="batch">
                             swing
@@ -138,13 +153,13 @@
         <ul>
             <li>
                 <h3>Industrial Engineering - Karlsruhe Institute of Technology</h3>
-                <p>Bachelor of Science degree with a focus on Predictive Data Analytics, Programming, SWE and Statistics.</p>
-                <a>2022 - 2026</a>
+                <p>Bachelor of Science degree with a focus on Predictive Data Analytics, Programming and Statistics.</p>
+                <b>2022 - 2026</b>
             </li>
             <li>
                 <h3>Abitur (A-levels) - Fritz-Erler Schule Tuttlingen</h3>
                 <p>Hightest german school educations with a focus on Math, CS, Economics and English.</p>
-                <a>2021</a>
+                <b>2021</b>
             </li>
         </ul>
         <h2>Work experience</h2>
@@ -152,32 +167,32 @@
             <li>
                 <h3>Intern Engineering Advanced Systems - Bosch Sensortec GmbH</h3>
                 <p>A lot of data engineering to support the engineering team developing MEMS sensor.</p>
-                <a>ongoing, 5 months</a>
+                <b>ongoing, 5 months</b>
             </li>
             <li>
                 <h3>Co-Founder & Software Engineer - Develoup GbR</h3>
-                <p>Founded a startup to help local authorities innovating their application management and conform to the Onlinezugangsgesetz (OZG).</p>
-                <a>ongoing, 1 year</a>
+                <p>Started a company to help local authorities modernize their application processes under the OZG.</p>
+                <b>ongoing, 1 year</b>
             </li>
             <li>
                 <h3>Intern Consulting, Data & AI Solutions - KPMG AG</h3>
-                <p>Learned a lot including that I want to do a lot more technical work.</p>
-                <a>2024, 4 months</a>
+                <p>Learned a lot including that I want to do work thats a lot more technical.</p>
+                <b>2024, 4 months</b>
             </li>
             <li>
                 <h3>Tutor Math, CS and Programming - Karlsruhe Institute of Technology</h3>
-                <p>Had fun improving my social skills and deepen my knowledge in the fields while teaching around 30 students.</p>
-                <a>2023 - 2024, 1 year 1 month</a>
+                <p>Had fun improving my social skills and deepen my knowledge while teaching around 30 students.</p>
+                <b>2023 - 2024, 1 year 1 month</b>
             </li>
              <li>
                 <h3>Working Student Software Engineering - kreateam</h3>
-                <p>Kickstarted my interest in software engineering with mobile, web and backend development.</p>
-                <a>2023 - 2024, 12 months</a>
+                <p>Sparked my interest in software engineering with mobile, web and backend development.</p>
+                <b>2023 - 2024, 12 months</b>
             </li>
             <li>
                 <h3>Intern SCM - B.Braun SE</h3>
-                <p>Important personal experience as it kicked of my ambitions prior to my studies at uni after finishing school.</p>
-                <a>2022, 6 months</a>
+                <p>Important personal experience as it kicked of my ambitions to step it up for uni.</p>
+                <b>2022, 6 months</b>
             </li>
         </ul>
     </div>
